build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/andy/OneDrive/Desktop/frc20/frc20/Test/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp: In member function 'virtual void apesofwrath::Robot::RobotInit()':
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:23:67: warning: 'void frc::SendableChooser<T>::AddDefault(wpi::StringRef, T) [with T = apesofwrath::Colors]' is deprecated: use SetDefaultOption() instead [-Wdeprecated-declarations]
   m_descolor_chooser.AddDefault("None", apesofwrath::Colors::WHITE);
                                                                   ^
In file included from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:13:0,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/smartdashboard/SendableChooser.h:57:8: note: declared here
   void AddDefault(wpi::StringRef name, T object) {
        ^~~~~~~~~~
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:24:66: warning: 'void frc::SendableChooser<T>::AddObject(wpi::StringRef, T) [with T = apesofwrath::Colors]' is deprecated: use AddOption() instead [-Wdeprecated-declarations]
   m_descolor_chooser.AddObject("Red",    apesofwrath::Colors::RED);
                                                                  ^
In file included from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:13:0,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/smartdashboard/SendableChooser.h:54:8: note: declared here
   void AddObject(wpi::StringRef name, T object) { AddOption(name, object); }
        ^~~~~~~~~
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:25:67: warning: 'void frc::SendableChooser<T>::AddObject(wpi::StringRef, T) [with T = apesofwrath::Colors]' is deprecated: use AddOption() instead [-Wdeprecated-declarations]
   m_descolor_chooser.AddObject("Blue",   apesofwrath::Colors::BLUE);
                                                                   ^
In file included from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:13:0,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/smartdashboard/SendableChooser.h:54:8: note: declared here
   void AddObject(wpi::StringRef name, T object) { AddOption(name, object); }
        ^~~~~~~~~
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:26:68: warning: 'void frc::SendableChooser<T>::AddObject(wpi::StringRef, T) [with T = apesofwrath::Colors]' is deprecated: use AddOption() instead [-Wdeprecated-declarations]
   m_descolor_chooser.AddObject("Green",  apesofwrath::Colors::GREEN);
                                                                    ^
In file included from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:13:0,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/smartdashboard/SendableChooser.h:54:8: note: declared here
   void AddObject(wpi::StringRef name, T object) { AddOption(name, object); }
        ^~~~~~~~~
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:27:69: warning: 'void frc::SendableChooser<T>::AddObject(wpi::StringRef, T) [with T = apesofwrath::Colors]' is deprecated: use AddOption() instead [-Wdeprecated-declarations]
   m_descolor_chooser.AddObject("Yellow", apesofwrath::Colors::YELLOW);
                                                                     ^
In file included from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:13:0,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/smartdashboard/SendableChooser.h:54:8: note: declared here
   void AddObject(wpi::StringRef name, T object) { AddOption(name, object); }
        ^~~~~~~~~
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp: In member function 'virtual void apesofwrath::Robot::TeleopPeriodic()':
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:118:85: error: expected ')' before '{' token
   if ((currentColor == desiredColor || desiredColor == apesofwrath::Colors::WHITE ) {
                                                                                     ^
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:132:1: error: expected primary-expression before '}' token
 }
 ^

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/andy/OneDrive/Desktop/frc20/frc20/Test/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
